<resources>
    <string name="app_name">ARE services</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="already_ac">Already have an  account ? <b><font color='#F1231A'>Login</font></b></string>
    <string name="new_user">Don\'t have an account? <b><font color='#F1231A'>Create a new account</font></b></string>
    <string name="login_or_register_to_continue">Login or register to continue</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_mobile_number">Enter your Mobile number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="or_connect_using">or Connect Using</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="connect_with_google">Connect With Google</string>
    <string name="connect_with_facebook">Connect With Facebook</string>
    <string name="send_otp">SEND OTP</string>
    <string name="providing">By proving my phone number , I hereby agree  \nand accept the <b><font color='#F1231A'>Terms of Service </font></b>and <b><font color='#F1231A'>Privacy Policy </font></b>I use \nof the ARE INDIA app.  </string>
    <string name="verify_otp">Verify otp</string>
    <string name="don_t_receive_otp">Don\'t Receive OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="f_password">Forgot Password</string>
    <string name="enter_your_otp_sent_to_your_number">Enter your OTP sent to your number</string>
    <string name="send">Send</string>
    <string name="list">List</string>
    <string name="customer_car_details">Customer Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="model_no">Model No.</string>
    <string name="registration_no">Registration No.</string>
    <string name="damage_part_name">Damage Part Type</string>
    <string name="upload_part_image">Upload Part Image</string>
    <string name="con_tinue">Continue</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="services">Services</string>
    <string name="choose_the_services_nyou_require">Choose the services \nyou require</string>
    <string name="save">Save</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="all_service">All Service</string>
    <string name="history">History</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="profile">Profile</string>
    <string name="contact_no">Contact No.</string>
    <string name="enter_your_gender">Enter your Gender</string>
    <string name="describe_your_damage_part_details">Describe your Damage Part Details</string>
    <string name="turn_on_internet_and_click_here">Turn On Internet And Click Here</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="category">Category</string>
    <string name="select">Select Service Type</string>

    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="damage_part_details">Damage Part Details</string>
</resources>