<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/categories"
        android:title="@string/category"/>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/gear"
        android:title="@string/setting"/>
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/cellphone"
        android:title="@string/contact_us"/>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/information"
        android:title="@string/about_us"/>


    <item
        android:id="@+id/nav_term"
        android:icon="@drawable/termsandconditions"
        android:title="@string/terms_amp_condition"/>


    <item
        android:id="@+id/nav_privacy"
        android:icon="@drawable/policy"
        android:title="@string/privacy_policy"/>


    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logt"
        android:title="@string/logout"/>



</menu>