<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:state_checked="true"
        android:state_enabled="true"
        android:color="@color/white"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_service"
        android:icon="@drawable/menu"
        android:state_checked="true"
        android:state_enabled="true"
        android:color="@color/white"
        android:title="@string/all_service"/>


    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:state_checked="true"
        android:state_enabled="true"
        android:color="@color/white"
        android:title="@string/profile"/>



    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/history"
        android:state_checked="true"
        android:state_enabled="true"
        android:color="@color/white"
        android:title="@string/history"/>





</menu>