<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CustomerCarDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:layout_height="50dp">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="3dp"
            android:id="@+id/ivBack"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/arrow"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tx"
            android:layout_centerHorizontal="true"
            android:text="@string/customer_car_details"
            android:layout_centerVertical="true"
            android:fontFamily="@font/robotoslabbold"
            android:textColor="@color/white"
            android:textSize="16dp" />





    </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="10dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/customer_name"
                android:textColorHint="@color/grey"
                android:textSize="13sp"
                android:maxLength="80"
                android:fontFamily="@font/robotoslabregular"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="10dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etModelNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/model_no"
                android:textColorHint="@color/grey"
                android:textSize="13sp"
                android:maxLength="20"
                android:fontFamily="@font/robotoslabregular"
                android:singleLine="true"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="10dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etRegistrationNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/robotoslabregular"
                android:hint="@string/registration_no"
                android:maxLength="30"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/grey"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_stroke"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txPartName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/damage_part_name"
                android:textColorHint="@color/grey"
                android:textSize="13sp"
                android:maxLength="80"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:fontFamily="@font/robotoslabregular"
                android:singleLine="true"
                android:padding="10dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:drawSelectorOnTop="true"

                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"/>



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_stroke"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txDamageDetail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/describe_your_damage_part_details"
                android:textColorHint="@color/grey"
                android:textSize="13sp"
                android:maxLength="80"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:fontFamily="@font/robotoslabregular"
                android:singleLine="true"
                android:padding="10dp" />

            <ImageView
                android:layout_width="20dp"
                android:src="@drawable/location"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                app:tint="@color/icon_Grey" />




        </RelativeLayout>





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_stroke"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txImage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/upload_part_image"
                android:textColorHint="@color/grey"
                android:textSize="13sp"
                android:maxLength="80"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:fontFamily="@font/robotoslabregular"
                android:singleLine="true"
                android:padding="10dp" />

            <ImageView
                android:layout_width="20dp"
                android:src="@drawable/camera"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                app:tint="@color/icon_Grey" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_stroke"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txLocation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/location"
                android:textColorHint="@color/grey"
                android:textSize="13sp"
                android:maxLength="80"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:fontFamily="@font/robotoslabregular"
                android:singleLine="true"
                android:padding="10dp" />

            <ImageView
                android:layout_width="20dp"
                android:src="@drawable/location"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                app:tint="@color/icon_Grey" />




        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:id="@+id/btnContinue"
            android:visibility="visible"
            android:fontFamily="@font/robotoslabbold"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/con_tinue"
            app:cornerRadius="2dp">


        </com.google.android.material.button.MaterialButton>


    </LinearLayout>
    </ScrollView>
</RelativeLayout>