<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ProfileListFrag">

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="30dp"
            android:id="@+id/ivBack"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/profile"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/ivBack"
            android:textStyle="bold" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="110dp"
            android:visibility="gone"
            android:layout_marginEnd="15dp"
            android:textSize="12dp"
            android:id="@+id/btLogout"
            android:textColor="@color/white"
            android:text="Logout"
            app:iconSize="18sp"
            app:icon="@drawable/logout"
            app:cornerRadius="10dp"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/purple_200"
            android:textAllCaps="false"
            android:fontFamily="@font/robotoslabbold"
            android:layout_alignParentEnd="true"
            android:layout_height="45dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#E0E0E0"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImg"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerInParent="true"
                android:src="@drawable/pronew">

            </de.hdodenhof.circleimageview.CircleImageView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="-45dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/profileImg"
                android:src="@drawable/cmer" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/user"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:fontFamily="@font/robotoslabbold"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:id="@+id/etName"
            android:fontFamily="@font/robotoslabregular"
            android:singleLine="true"
            android:maxLength="40"
            android:inputType="textPersonName"
            android:background="@null"
            android:hint="@string/enter_your_name"
            android:paddingLeft="10dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/edit"/>
    </RelativeLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:tint="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dob"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:fontFamily="@font/robotoslabbold"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rlDate"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:hint="@string/dd_mm_yyyy"
            android:id="@+id/txDob"
            android:fontFamily="@font/robotoslabregular"
            android:gravity="center_vertical"
            android:paddingLeft="10dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/edit"/>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/phonenn"
            app:tint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/robotoslabbold" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:hint="@string/enter_your_mobile_number"
            android:id="@+id/txMobile"
            android:fontFamily="@font/robotoslabregular"
            android:gravity="center_vertical"
            android:paddingLeft="10dp" />




        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/edit"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/gender"
            app:tint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/robotoslabbold" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_marginLeft="35dp"
            android:inputType="text"
            android:layout_centerVertical="true"
            >


            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:button="@null"
                android:fontFamily="@font/robotoslabregular"
                android:paddingRight="15dp"
                android:drawableRight="@android:drawable/btn_radio"
                android:drawablePadding="30dp"
                android:gravity="center_vertical"
                android:text="@string/male"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@null"
                android:layout_weight="1"
                android:fontFamily="@font/robotoslabregular"
                android:paddingRight="15dp"
                android:drawableRight="@android:drawable/btn_radio"
                android:drawablePadding="30dp"
                android:gravity="center_vertical"
                android:text="@string/female"
                android:textSize="14sp" />

        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/robotoslabmedium"
            android:id="@+id/btnNext"
            android:backgroundTint="@color/purple_200"
            android:layout_centerInParent="true"
            android:text="@string/save">

        </com.google.android.material.button.MaterialButton>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp" />

</LinearLayout>