<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtpVerifyActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="100dp"
                android:id="@+id/ivGoogle"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:src="@drawable/phone"
                android:layout_height="100dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/tx"
                android:layout_marginTop="15dp"
                android:text="OTP Verification "
                android:layout_gravity="center"
                android:fontFamily="@font/robotoslabbold"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txEnter"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:layout_marginTop="15dp"
                android:text="@string/enter_your_otp_sent_to_your_number"
                android:fontFamily="@font/robotoslabbold"
                android:textSize="12sp"
                android:layout_marginRight="15dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:id="@+id/rlOtp"
                android:layout_marginTop="15dp"
                android:visibility="visible"
                android:layout_height="wrap_content">

                <com.chaos.view.PinView
                    android:id="@+id/pinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:cursorVisible="true"
                    android:inputType="number"
                    app:itemCount="6"
                    android:elevation="15dp"
                    android:translationZ="0.5dp"
                    app:hideLineWhenFilled="false"
                    app:itemRadius="6dp"
                    app:itemSpacing="12sp"
                    />



            </RelativeLayout>



            <TextView
                android:id="@+id/txt"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:layout_marginTop="15dp"
                android:text="@string/don_t_receive_otp"
                android:fontFamily="@font/robotoslabbold"
                android:textSize="12sp"
                android:layout_marginRight="15dp" />

            <TextView
                android:id="@+id/txResend"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200"
                android:layout_marginTop="15dp"
                android:text="@string/resend_otp"
                android:fontFamily="@font/robotoslabbold"
                android:textSize="12sp"
                android:layout_marginRight="15dp" />



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="35dp"
                android:id="@+id/btnVerify"
                android:visibility="visible"
                android:fontFamily="@font/robotoslabbold"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/verify_otp"
                app:cornerRadius="2dp">


            </com.google.android.material.button.MaterialButton>






        </LinearLayout>


    </ScrollView>
</RelativeLayout>